# Tito_firmware

./: CMakeLists.txt  README.md  mcan_fd_operation_interrupt_timestamp.7z  prj.conf  project.yml
boards/: sam_v71b_xult.overlay
firmware/src/: main.c  main_v71.c  mcan_fd_interrupt.c  mcan_fd_interrupt.h  tarea_2.c  tarea_principal.c  tarea_principal.h  tarea_principal2.c  tarea_uart.c  tarea_uart.h
include/: network_parameters.h
lib/CANopen/: CANopen.c  CANopen.h  Dictionary.h
lib/MPU6050/: MPU6050.c  MPU6050.h
lib/TMTC/: communication_interface.c  communication_interface.h  telecommand_interface.c  telecommand_interface.h  telemetry_interface.c  telemetry_interface.h
lib/driver_emulator/: driver_emulator.c  driver_emulator.h
lib/driver_interface/: driver_interface.c  driver_interface.h
lib/epos4/: epos4.c  epos4.h
lib/epos_driver/: epos_driver.c  epos_driver.h
lib/height_controller/: height_controller.c  height_controller.h
lib/message_handler/: message_handler.c  message_handler.h
lib/udp_bridge/: udp_bridge.c  udp_bridge.h
lib/udp_handler/: udp_handler.c  udp_handler.h
lib/velocity_controller/: velocity_controller.c  velocity_controller.h
sam_v71_xult.X/nbproject/: Makefile-sam_v71_xult.mk  configurations.xml
scripts/: linux_build.sh  linux_debug.sh  linux_flash.sh  linux_test.sh
src/: TITO_Mov.c  TITO_Mov.h  main.c  telecommand_thread.c  telecommand_thread.h  telemetry_thread.c  telemetry_thread.h
src/telecommands/: TM_Enable.c  TM_Enable.h  Telecommands.h  get_timestamp.c  get_timestamp.h  (+6 more)
test/: test_height_controller.c
(+41 files in other folders)
